welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:2: error: Missing closing brace `}' assumed here
for (tour <- 1 to 10) {
^